--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -19,4 +19,11 @@
             }
     }
 }
+@media (max-width: 768px) {
+    .navbar {
+        img {
+            width: 50%;
+        }
+    }
+}
 
