nueva medida para logo en   mediaqueries nav-bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 
 @media (max-width: 768px) {
   /* line 24, ../../../../../../../../../../../../../Users/pumilu/Desktop/DW/Maria Milagros Orlandini/rueda/sass/_menu.scss */
-  .navbar img {
+  .navbar-brand img {
     width: 50%; } }
 
 /* line 1, ../../../../../../../../../../../../../Users/pumilu/Desktop/DW/Maria Milagros Orlandini/rueda/sass/_footer.scss */
